--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header">
             <nav class="navbar">
-                <a href="" class="logo">IEEE SB SJCET</a>
+                <a href="" class="logo">sb</a>
                 <ul class="nav-links">
                     <li><a href="">HOME</a></li>
                     <li><a href="">EVENTS</a></li>
