--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="" class="logo">SB</a>
                 <ul class="nav-links">
                     <li><a href="">HOME</a></li>
-                    <li><a href="">EVENTS</a></li>
+                    <li><a href="events.html">EVENTS</a></li>
                     <li><a href="">SOCIETIES</a></li>
                     <li><a href="">EXECOM</a></li>
                     <li><a href="">BLOG</a></li>
@@ -37,6 +37,8 @@
         </div>
 
 
+
+
         
     </header>
 
@@ -46,12 +48,12 @@
     <br>
     <br>
 
-    <h1 style="font-family: CS; text-align: center;">Events</h1>
+    <h1 style="font-family: CS; text-align: center;">What's new?</h1>
 
     <br><br>
 
 
-    <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="449" view-url="https://app.tagembed.com/e/449">  </div><script src="//web.tagembed.com/app/js/embed.min.js" type="text/javascript"></script></div>
+    <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="460" view-url="https://app.tagembed.com/e/460">  </div><script src="//web.tagembed.com/app/js/embed.min.js" type="text/javascript"></script></div>
 
     <br><br><br><br>
     
@@ -67,6 +69,13 @@
     </script>
 
     <script src="index.js"></script>
+
+
+
+
+
+
+</script>
 </body>
 
 
