--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <body>
     <header>
         <div class="header">
-            <nav class="navbar">
-                <a href="" class="logo">SB</a>
-                <ul class="nav-links">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="events.html">EVENTS</a></li>
-                    <li><a href="">SOCIETIES</a></li>
-                    <li><a href="">EXECOM</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+            <nav> 
+               <input id="nav-toggle" type="checkbox">
+                <div class="logo">IEEE<strong>SJCET</strong></div>
+                <ul class="links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="#work">Socities</a></li>
+                    <li><a href="#projects">Execom</a></li>
+                    <li><a href="#contact">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
-
-                <div class="burger">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div>
-            </nav>
+                <label for="nav-toggle" class="icon-burger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </label>
+            </nav> 
             <div class="header-main-content">
                 <h1 class="we-create" id="wec">
                     
@@ -76,6 +76,14 @@
 
 
 </script>
+  <br>
+<br>
+<hr>
+        <div class="copyright">
+            <h4>Copyright @IEEE SB SJCET.All Rights Reserved</h4>
+            <h4>Terms And Use</h4>
+            <h4>Privacy And Policy</h4>
+        </div>  
 </body>
 
 
